--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,22 +20,22 @@ jobs:
         run: |
           mkdir public
 
-          ./generate-domains-blocklist.py -o blocklist.txt -r empty.txt -a empty.txt
-          sed -E "/^#|^$/d" blocklist.txt | sort -u | gzip > public/blocklist.txt.gz
+          ./generate-domains-mainlist.py -o mainlist.txt -r empty.txt -a empty.txt
+          sed -E "/^#|^$/d" mainlist.txt | sort -u | gzip > public/mainlist.txt.gz
 
           tree -H '.' \
-          -L 1 \
-          --noreport \
-          --dirsfirst \
-          --charset utf-8 \
-          --ignore-case \
-          --timefmt '%d-%b-%Y %H:%M' \
-          -I "index.html" \
-          -T 'Downloads' \
-          -s -D \
-          -P "*.gz" \
-          -o public/index.html \
-          public
+                 -L 1 \
+                 --noreport \
+                 --dirsfirst \
+                 --charset utf-8 \
+                 --ignore-case \
+                 --timefmt '%d-%b-%Y %H:%M' \
+                 -I "index.html" \
+                 -T 'Downloads' \
+                 -s -D \
+                 -P "*.gz" \
+                 -o public/index.html \
+                 public
 
       - name: Publish site
         uses: peaceiris/actions-gh-pages@v3.9.3
