--- a/domains-blocklist.conf
+++ b/domains-blocklist.conf
@@ -24,7 +24,7 @@
 ##################################################################################
 
 # Local additions
-#file:domains-blocklist-local-additions.txt
+file:iranads.txt
 
 # AdAway is an open source ad blocker for Android using the hosts file.
 # https://raw.githubusercontent.com/AdAway/adaway.github.io/master/hosts.txt
